force-app/main/default/objects/APT_International_Price_Data__c/APT_International_Price_Data__c.object-meta.xml
<CustomObject>
    <label>International Price Data</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>International Price Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>International Price Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>