force-app/main/default/objects/APT_International_Price_Data__c/fields/APT_Band__c.field-meta.xml
<CustomField>
    <fullName>APT_Band__c</fullName>
    <label>Band</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BAND 1</fullName>
            </value>
            <value>
                <fullName>BAND 2</fullName>
            </value>
            <value>
                <fullName>BAND 3</fullName>
            </value>
            <value>
                <fullName>BAND 4</fullName>
            </value>
            <value>
                <fullName>BAND 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>