force-app/main/default/objects/APT_International_Price_Data__c/fields/APT_Band_Range_Min__c.field-meta.xml
<CustomField>
    <fullName>APT_Band_Range_Min__c</fullName>
    <label>Band Range Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>