force-app/main/default/objects/APT_International_Price_Data__c/fields/APT_CSP_Per_Item_Rate__c.field-meta.xml
<CustomField>
    <fullName>APT_CSP_Per_Item_Rate__c</fullName>
    <label>CSP Per Item Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>