force-app/main/default/objects/APT_International_Price_Data__c/fields/APT_eParcel_Per_Kg_Rate__c.field-meta.xml
<CustomField>
    <fullName>APT_eParcel_Per_Kg_Rate__c</fullName>
    <label>eParcel Per Kg Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>