force-app/main/default/objects/APT_International_Price_Data__c/fields/APT_Product__c.field-meta.xml
<CustomField>
    <fullName>APT_Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>