force-app/main/default/objects/APT_International_Price_Data__c/fields/APT_Zone__c.field-meta.xml
<CustomField>
    <fullName>APT_Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zone1</fullName>
            </value>
            <value>
                <fullName>Zone2</fullName>
            </value>
            <value>
                <fullName>Zone3</fullName>
            </value>
            <value>
                <fullName>Zone4</fullName>
            </value>
            <value>
                <fullName>Zone5</fullName>
            </value>
            <value>
                <fullName>Zone6</fullName>
            </value>
            <value>
                <fullName>Zone7</fullName>
            </value>
            <value>
                <fullName>Zone8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>