force-app/main/default/objects/APT_International_Price_Data__c/listViews/EMSMERCH.listView-meta.xml
<ListView>
    <fullName>EMSMERCH</fullName>
    <columns>NAME</columns>
    <columns>APT_Industry__c</columns>
    <columns>APT_Band__c</columns>
    <columns>APT_Zone__c</columns>
    <columns>APT_Product__c</columns>
    <columns>APT_Band_Range_Min__c</columns>
    <columns>APT_Band_Range_Max__c</columns>
    <columns>APT_CSP_Per_Item_Rate__c</columns>
    <columns>APT_CSP_Per_Kg_Rate__c</columns>
    <columns>APT_eParcel_Per_Item_Rate__c</columns>
    <columns>APT_eParcel_Per_Kg_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APT_Product__c</field>
        <operation>equals</operation>
        <value>EMSMERCH</value>
    </filters>
    <label>EMSMERCH</label>
</ListView>